<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnButtonsExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtButtonsExercise" />

        <Button
            android:id="@+id/btnLayoutExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLayoutExercise" />

        <Button
            android:id="@+id/btnCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCalculator" />

        <Button
            android:id="@+id/btnColorMatching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_midterm" />

        <Button
            android:id="@+id/btnConnect3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_connect3" />

        <Button
            android:id="@+id/btnPassingIntents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_passing_intents" />

        <Button
            android:id="@+id/btnFragments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fragments" />

        <Button
            android:id="@+id/btnMenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_menus" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>