<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnOpenAndClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOpenAndClose" />

        <Button
            android:id="@+id/btnToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtToast" />

        <Button
            android:id="@+id/btnChangeBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtChangeBg" />

        <Button
            android:id="@+id/btnChangeButtonBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtChangeButtonBg" />

        <Button
            android:id="@+id/btnDisappear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDisappear" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>