<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/calculatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/txtLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="48dp">

            <TextView
                android:id="@+id/txtEquation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textAlignment="textEnd"
                android:textColor="@color/primary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="48sp" />
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/btnGrid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="24dp"
            app:alignmentMode="alignMargins"
            app:columnCount="4"
            app:rowCount="5"
            app:useDefaultMargins="true">

            <Button
                android:id="@+id/btnAllClr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_all_clr"
                android:text="@string/txtAllClr"
                android:textColor="@color/accent2"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnClr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtClr"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnPar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtPar"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_op"
                android:text="@string/txtDiv"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum7"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum8"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum9"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_op"
                android:text="@string/txtMul"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum4"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum5"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum6"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_op"
                android:text="@string/txtSub"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum1"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum2"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum3"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_op"
                android:text="@string/txtAdd"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnNum0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtNum0"
                android:textSize="20sp"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_num"
                android:text="@string/txtDot"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnEqu"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/btn_equ"
                android:text="@string/txtEqu"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>