<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutColorMatching"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridColorMatching"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:columnCount="3"
            app:rowCount="3">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btnColorMatching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_blank"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowSpan="1"
                app:layout_rowWeight="1" />
        </androidx.gridlayout.widget.GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/btn_return"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnAutoWin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/btn_autowin"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>